Refactor NIST SP 800-90B schema, tests, and validation logic:
- Introduced new `nist_90b_estimator_results` table for storing detailed results from 14 estimator tests (10 Non-IID, 4 IID), replacing deprecated columns.
- Updated `nist_90b_results` table schema to store aggregate assessment results.
- Added comprehensive tests to ensure proper estimator persistence, JSON details handling, and upstream `NULL`/`0.0` mappings.
- Refactored DTOs and test setup to align with schema updates, removing deprecated entropy fields.
- Introduced async job handling using `nist-validation-executor` with CDI producers.
- Updated application properties to support schema changes and executor configuration.